{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 21,
  "lineage": "b3189dda-5413-52b4-debf-b8669753854b",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "azuretf-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/publicIPAddresses/azuretf-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.169.229.175",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "azuretf-ip",
            "resource_group_name": "azuretf-resources",
            "sku": "Basic",
            "tags": {
              "environment": "Dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "azuretf-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkInterfaces/azuretf-nic",
            "internal_domain_name_suffix": "khnisrtmmplednb2b1dvyhkuod.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/publicIPAddresses/azuretf-ip",
                "subnet_id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/virtualNetworks/azuretf-network/subnets/azuretf-subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-12-CA-BC",
            "name": "azuretf-nic",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "azuretf-resources",
            "virtual_machine_id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Compute/virtualMachines/azuretf-lvm"
          },
          "dependencies": [
            "azurerm_public_ip.azuretf-ip",
            "azurerm_resource_group.azuretf-rg",
            "azurerm_subnet.azuretf-subnet",
            "azurerm_virtual_network.azuretf-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "azuretf-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/azuretf-sg",
            "location": "eastus",
            "name": "azuretf-sg",
            "resource_group_name": "azuretf-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "azuretf-sg-rule1",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.azuretf-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "azuretf-gs-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/azuretf-sg/securityRules/azuretf-sg-rule1",
            "name": "azuretf-sg-rule1",
            "network_security_group_name": "azuretf-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "azuretf-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.azuretf-sg",
            "azurerm_resource_group.azuretf-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "azuretf-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/publicIPAddresses/azuretf-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.169.229.175",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "azuretf-ip",
            "resource_group_name": "azuretf-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.azuretf-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "azuretf-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/virtualNetworks/azuretf-network/subnets/azuretf-subnet1",
            "name": "azuretf-subnet1",
            "resource_group_name": "azuretf-resources",
            "virtual_network_name": "azuretf-network"
          },
          "dependencies": [
            "azurerm_resource_group.azuretf-rg",
            "azurerm_virtual_network.azuretf-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "azuretf-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/virtualNetworks/azuretf-network/subnets/azuretf-subnet1",
            "network_security_group_id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/azuretf-sg",
            "subnet_id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/virtualNetworks/azuretf-network/subnets/azuretf-subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.azuretf-sg",
            "azurerm_resource_group.azuretf-rg",
            "azurerm_subnet.azuretf-subnet",
            "azurerm_virtual_network.azuretf-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "azuretf-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4689da51-636c-41d6-b43c-0ec75c1d5473",
            "id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/virtualNetworks/azuretf-network",
            "location": "eastus",
            "name": "azuretf-network",
            "resource_group_name": "azuretf-resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/virtualNetworks/azuretf-network/subnets/subnet1",
                "name": "subnet1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/virtualNetworks/azuretf-network/subnets/subnet2",
                "name": "subnet2",
                "security_group": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/azuretf-sg"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/virtualNetworks/azuretf-network/subnets/azuretf-subnet1",
                "name": "azuretf-subnet1",
                "security_group": "/subscriptions/827b9ded-08ea-40ab-a790-1f823ba157eb/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/azuretf-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.azuretf-rg"
          ]
        }
      ]
    }
  ]
}